1818.	[bug]		'named-checkconf -z' triggered an INSIST. [RT #13599]

1817.	[placeholder]	rt13587

1816.	[placeholder]	rt13597

1815.	[placeholder]	rt13086

1814.	[func]		UNIX domain controls are now supported.

1813.	[placeholder]	rt13505

1812.	[port]		win32: IN6_IS_ADDR_UNSPECIFIED macro is incorrect.
			[RT #13453]

1811.	[placeholder]	rt13547

1810.	[placeholder]	rt13212

1809.	[placeholder]	rt13463

1808.	[bug]		zone.c:notify_zone() contained a race condition,
			zone->db could change underneath it.  [RT #13511]

1807.	[placeholder]	rt13526

1806.	[bug]		The resolver returned the wrong result when a CNAME /
			DNAME was encountered when fetching glue from a
			secure namespace. [RT #13501]

1805.	[bug]		Pending status was not being cleared when DLV was
			active. [RT #13501]

1804.	[placeholder]	rt10114

1803.	[placeholder]	rt13483

1802.	[placeholder]	rt11280

1801.	[func]		Report differences between hints and real NS rrset
			and associated address records.

1800.	[bug]		Changes #1719 allowed a INSIST to be triggered.
			[RT #13428]

1799.	[placeholder]	rt13438

1798.	[func]		The server syntax has been extended to support a
			range of servers.  [RT #11132]

1797.	[func]		named-checkconf now check acls to verify that they
			only refer to existing acls. [RT #13101]

1796.	[func]		"rndc freeze/thaw" now freezes/thaws all zones.

1795.	[placeholder]	rt13396

1794.	[func]		Named and named-checkzone can now both check for
			non-terminal wildcard records.

1793.	[func]		Extend adjusting TTL warning messages. [RT #13378]

1792.	[func]		New zone option "notify-delay".  Specify a minimum
			delay between sets of NOTIFY messages.

1791.	[placeholder]	rt13230

1790.	[cleanup]	Move lib/dns/sec/dst up into lib/dns.  This should
			allow parallel make to succeed.

1789.	[bug]		Prerequisite test for tkey and dnssec could fail
			with "configure --with-libtool".

1788.	[bug]		libbind9.la/libbind9.so needs to link against
			libisccfg.la/libisccfg.so.
